--- a/core/templates/suppliers.html
+++ b/core/templates/suppliers.html
@@ -19,6 +19,9 @@
                     <table class="table">
                       <thead class=" text-primary">
                         <th>
+                           Action
+                        </th>
+                        <th>
                           Nome
                         </th>
                         <th>
@@ -38,7 +41,9 @@
                {% for fornecedor in fornecedor%}
 
                         <tr>
-
+                            <td>
+                                Pick
+                            </td>
                           <td>
                             {{fornecedor.nome}}
                           </td>
