--- a/core/templates/order.html
+++ b/core/templates/order.html
@@ -10,11 +10,12 @@
         <div class="col-md-12">
             <div class="card card-profile">
                 <div class="card-body">
-                    <h6 class="card-category text-gray">Page Blank</h6>
-                    <h4 class="card-title">
-                        Add your content
-                    </h4>
-                    <a href="/" class="btn btn-primary btn-round">Home</a>
+                    <div class="form-group">
+                        <form method='POST'> {% csrf_token %}
+                            {{forms.as_p }}
+                        <input type = "submit" value = 'Save' />
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
