--- a/core/templates/page-user.html
+++ b/core/templates/page-user.html
@@ -11,8 +11,8 @@
             <div class="col-md-8">
               <div class="card">
                 <div class="card-header card-header-primary">
-                  <h4 class="card-title">Edit Profile</h4>
-                  <p class="card-category">Complete your profile</p>
+                  <h4 class="card-title">Editar informações da obra</h4>
+                  <p class="card-category">Acrescente informações necessárias</p>
                 </div>
                 <div class="card-body">
                   <form>
@@ -25,13 +25,13 @@
                       </div>
                       <div class="col-md-3">
                         <div class="form-group">
-                          <label class="bmd-label-floating">Username</label>
+                          <label class="bmd-label-floating">Nome da Obra</label>
                           <input type="text" class="form-control" value="{{ request.user.username }}">
                         </div>
                       </div>
                       <div class="col-md-4">
                         <div class="form-group">
-                          <label class="bmd-label-floating">Email address</label>
+                          <label class="bmd-label-floating">Email do responsável </label>
                           <input type="email" class="form-control" value="{{ request.user.email }}">
                         </div>
                       </div>
@@ -39,13 +39,13 @@
                     <div class="row">
                       <div class="col-md-6">
                         <div class="form-group">
-                          <label class="bmd-label-floating">Fist Name</label>
+                          <label class="bmd-label-floating">Gestor Trezentos</label>
                           <input type="text" class="form-control">
                         </div>
                       </div>
                       <div class="col-md-6">
                         <div class="form-group">
-                          <label class="bmd-label-floating">Last Name</label>
+                          <label class="bmd-label-floating">Ponto focal do cliente</label>
                           <input type="text" class="form-control">
                         </div>
                       </div>
@@ -53,7 +53,7 @@
                     <div class="row">
                       <div class="col-md-12">
                         <div class="form-group">
-                          <label class="bmd-label-floating">Adress</label>
+                          <label class="bmd-label-floating">Endereço da obra</label>
                           <input type="text" class="form-control">
                         </div>
                       </div>
@@ -61,19 +61,19 @@
                     <div class="row">
                       <div class="col-md-4">
                         <div class="form-group">
-                          <label class="bmd-label-floating">City</label>
+                          <label class="bmd-label-floating">Cidade da obra</label>
                           <input type="text" class="form-control">
                         </div>
                       </div>
                       <div class="col-md-4">
                         <div class="form-group">
-                          <label class="bmd-label-floating">Country</label>
+                          <label class="bmd-label-floating">Estado da Obra</label>
                           <input type="text" class="form-control">
                         </div>
                       </div>
                       <div class="col-md-4">
                         <div class="form-group">
-                          <label class="bmd-label-floating">Postal Code</label>
+                          <label class="bmd-label-floating">CEP</label>
                           <input type="text" class="form-control">
                         </div>
                       </div>
@@ -81,15 +81,15 @@
                     <div class="row">
                       <div class="col-md-12">
                         <div class="form-group">
-                          <label>About Me</label>
+                          <label>Mais detalhes</label>
                           <div class="form-group">
-                            <label class="bmd-label-floating"> Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.</label>
-                            <textarea class="form-control" rows="5"></textarea>
+                            <label class="bmd-label-floating"> Uma obra muito boa</label>
+                            <textarea id = "info" class="form-control" rows="5"></textarea>
                           </div>
                         </div>
                       </div>
                     </div>
-                    <button type="submit" class="btn btn-primary pull-right">Update Profile</button>
+                    <button  type="submit" class="btn btn-primary pull-right">Atualizar</button>
                     <div class="clearfix"></div>
                   </form>
                 </div>
@@ -99,7 +99,7 @@
               <div class="card card-profile">
                 <div class="card-avatar">
                   <a href="#pablo">
-                    <img class="img" src="/static/assets/img/faces/marc.jpg" />
+                    <img class="img" src="/static/assets/img/sidebar-2.jpg" />
                   </a>
                 </div>
                 <div class="card-body">
@@ -110,9 +110,9 @@
                     {{ request.suser.email }}
                   </h4>
                   <p class="card-description">
-                    Don't be scared of the truth because we need to restart the human foundation in truth And I love you like Kanye loves Kanye I love Rick Owens’ bed design but the back is...
+                    Nova obra de arquitetura par ao cliente XYZ
                   </p>
-                  <a href="#pablo" class="btn btn-primary btn-round">Follow</a>
+                  <a href="#pablo" class="btn btn-primary btn-round"></a>
                 </div>
               </div>
             </div>
