corrigindo login para utilizar campos personalizados para cada obra

--- a/core/templates/accounts/login.html
+++ b/core/templates/accounts/login.html
@@ -12,7 +12,7 @@
       <div class="card">
         <div class="card-header card-header-primary">
           <h4 class="card-title">
-            Login
+            Entre na obra
           </h4>
         </div>
         <div class="card-body">
@@ -57,7 +57,7 @@
 
             &nbsp; &nbsp; 
             <span class="pull-right">
-              Don't have an account? <a href="{% url 'register' %}" class="text-primary">Create</a>
+              Obra não cadastrada? <a href="{% url 'register' %}" class="text-primary">Cadastre a obra</a>
             </span>
 
             <div class="clearfix"></div>
