--- a/core/templates/ui-notifications.html
+++ b/core/templates/ui-notifications.html
@@ -15,20 +15,20 @@
 
             </div>
 
-        <div class="card-body">
-                    <div class="table-responsive">
-                        <table class="table">
-                            <thead class=" text-primary">
-                            <div class="form-group">
-                                <form method='POST'> {% csrf_token %}
-                                    {{forms.as_p }}
-                                <input type = "submit" value = 'Save' />
-                                </form>
-                            </div>
-                            </thead>
-                        </table>
-                    </div>
-                </div>
+<!--        <div class="card-body">-->
+<!--                    <div class="table-responsive">-->
+<!--                        <table class="table">-->
+<!--                            <thead class=" text-primary">-->
+<!--                            <div class="form-group">-->
+<!--                                <form method='POST'> {% csrf_token %}-->
+<!--                                    {{forms.as_p }}-->
+<!--                                <input type = "submit" value = 'Save' />-->
+<!--                                </form>-->
+<!--                            </div>-->
+<!--                            </thead>-->
+<!--                        </table>-->
+<!--                    </div>-->
+<!--                </div>-->
 
 {% endblock content %}
 
