resolvendo alguns bugs, e melhorando frontend do index

--- a/core/templates/page-user.html
+++ b/core/templates/page-user.html
@@ -109,7 +109,7 @@
                     {{ request.user.username }}
                   </h6>
                   <h2>
-                    Dias até o deadline 
+                    Dias até o deadline: 23
                   </h2>
                   <h4 class="card-title">
                     Data de início: {{ user.profile.dataIncio }}
