--- a/core/templates/includes/footer.html
+++ b/core/templates/includes/footer.html
@@ -19,5 +19,9 @@
                       href="https://www.creative-tim.com/">Creative Tim</a> 
                       - coded by <a target="_blank" rel="noopener noreferrer" href="https://appseed.us">AppSeed</a>
           </div>
+              <div class="copyright float-right">
+            &copy; <a target="_blank" rel="noopener noreferrer"
+                      href="https://www.denisdev.com/"> Dênis Gonçalves</a>
+          </div>
         </div>
     </footer>
