--- a/core/templates/includes/navigation.html
+++ b/core/templates/includes/navigation.html
@@ -3,7 +3,7 @@
       <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
         <div class="container-fluid">
           <div class="navbar-wrapper">
-            <a class="navbar-brand" href="#pablo">Dashboard</a>
+            <a class="navbar-brand" href="#pablo">Trezentos</a>
           </div>
           <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
             <span class="sr-only">Toggle navigation</span>
@@ -56,9 +56,9 @@
                   </p>
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
-                  <a class="dropdown-item" href="/page-user.html">Profile</a>
+                  <a class="dropdown-item" href="/page-user.html">Painel da Obra</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="{% url 'logout' %}" >Log out</a>
+                  <a class="dropdown-item" href="{% url 'logout' %}" >Sair</a>
                 </div>
               </li>
             </ul>
