--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "layouts/base.html" %}
 
-{% block title %} Dashboard {% endblock %} 
+{% block title %} Dashboard {% endblock %}
 
 <!-- Specific Page CSS goes HERE  -->
 {% block stylesheets %}{% endblock stylesheets %}
@@ -12,7 +12,7 @@
         <div class="card card-stats">
           <div class="card-header card-header-warning card-header-icon">
             <div class="card-icon">
-              <i class="material-icons">content_copy</i>
+              <i class="material-icons">account_balance_wallet</i>
             </div>
             <p class="card-category">Buget Obra</p>
             <h3 class="card-title">R$45.000,00
@@ -30,10 +30,10 @@
         <div class="card card-stats">
           <div class="card-header card-header-success card-header-icon">
             <div class="card-icon">
-              <i class="material-icons">store</i>
+              <i class="material-icons">payments</i>
             </div>
             <p class="card-category">Total Gasto</p>
-            <h3 class="card-title">R$34.245</h3>
+            <h3 class="card-title">R$34.245,00</h3>
           </div>
           <div class="card-footer">
             <div class="stats">
@@ -48,7 +48,7 @@
             <div class="card-icon">
               <i class="material-icons">info_outline</i>
             </div>
-            <p class="card-category">OC em aberto</p>
+            <p class="card-category">Pedidos em aberto</p>
             <h3 class="card-title">75</h3>
           </div>
           <div class="card-footer">
@@ -62,7 +62,7 @@
         <div class="card card-stats">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
-              <i class="fa fa-money"></i>
+              <i class="material-icons">add_location_alt</i>
             </div>
             <p class="card-category">Entregas atrasadas</p>
             <h3 class="card-title">8</h3>
@@ -115,8 +115,8 @@
             <div class="ct-chart" id="completedTasksChart"></div>
           </div>
           <div class="card-body">
-            <h4 class="card-title">Tarefas completadas por Rafael</h4>
-            <p class="card-category">Baseado em seu todo list</p>
+            <h4 class="card-title">Tarefas completadas pela equipe</h4>
+            <p class="card-category">Baseado no to-do list</p>
           </div>
           <div class="card-footer">
             <div class="stats">
@@ -136,19 +136,19 @@
                 <ul class="nav nav-tabs" data-tabs="tabs">
                   <li class="nav-item">
                     <a class="nav-link active" href="#profile" data-toggle="tab">
-                      <i class="material-icons">bug_report</i> Bugs
+                      <i class="material-icons">construction</i> Obra
                       <div class="ripple-container"></div>
                     </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#messages" data-toggle="tab">
-                      <i class="material-icons">code</i> Website
+                      <i class="material-icons">money</i> Financeiro
                       <div class="ripple-container"></div>
                     </a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#settings" data-toggle="tab">
-                      <i class="material-icons">cloud</i> Server
+                      <i class="material-icons">people</i> Equipe
                       <div class="ripple-container"></div>
                     </a>
                   </li>
@@ -172,7 +172,7 @@
                           </label>
                         </div>
                       </td>
-                      <td>Sign contract for "What are conference organizers afraid of?"</td>
+                      <td>Contratar equipe para transporte</td>
                       <td class="td-actions text-right">
                         <button type="button" rel="tooltip" title="Edit Task" class="btn btn-primary btn-link btn-sm">
                           <i class="material-icons">edit</i>
@@ -193,7 +193,7 @@
                           </label>
                         </div>
                       </td>
-                      <td>Lines From Great Russian Literature? Or E-mails From My Boss?</td>
+                      <td>Verificar fornecedor de cimento</td>
                       <td class="td-actions text-right">
                         <button type="button" rel="tooltip" title="Edit Task" class="btn btn-primary btn-link btn-sm">
                           <i class="material-icons">edit</i>
@@ -214,7 +214,7 @@
                           </label>
                         </div>
                       </td>
-                      <td>Flooded: One year later, assessing what was lost and what was found when a ravaging rain swept through metro Detroit
+                      <td>Enviar modelo 3D para o cliente
                       </td>
                       <td class="td-actions text-right">
                         <button type="button" rel="tooltip" title="Edit Task" class="btn btn-primary btn-link btn-sm">
@@ -236,7 +236,7 @@
                           </label>
                         </div>
                       </td>
-                      <td>Create 4 Invisible User Experiences you Never Knew About</td>
+                      <td>Visita técnica na obra</td>
                       <td class="td-actions text-right">
                         <button type="button" rel="tooltip" title="Edit Task" class="btn btn-primary btn-link btn-sm">
                           <i class="material-icons">edit</i>
@@ -263,7 +263,7 @@
                           </label>
                         </div>
                       </td>
-                      <td>Flooded: One year later, assessing what was lost and what was found when a ravaging rain swept through metro Detroit
+                      <td>Emitir nota fiscal para cliente
                       </td>
                       <td class="td-actions text-right">
                         <button type="button" rel="tooltip" title="Edit Task" class="btn btn-primary btn-link btn-sm">
@@ -285,7 +285,7 @@
                           </label>
                         </div>
                       </td>
-                      <td>Sign contract for "What are conference organizers afraid of?"</td>
+                      <td>Pagamento de material de construção</td>
                       <td class="td-actions text-right">
                         <button type="button" rel="tooltip" title="Edit Task" class="btn btn-primary btn-link btn-sm">
                           <i class="material-icons">edit</i>
@@ -312,7 +312,7 @@
                           </label>
                         </div>
                       </td>
-                      <td>Lines From Great Russian Literature? Or E-mails From My Boss?</td>
+                      <td>Folga do Rafael dia 12 de agosto</td>
                       <td class="td-actions text-right">
                         <button type="button" rel="tooltip" title="Edit Task" class="btn btn-primary btn-link btn-sm">
                           <i class="material-icons">edit</i>
@@ -333,7 +333,7 @@
                           </label>
                         </div>
                       </td>
-                      <td>Flooded: One year later, assessing what was lost and what was found when a ravaging rain swept through metro Detroit
+                      <td> Comprar nootbook com autoCad para o funcionário XYZ
                       </td>
                       <td class="td-actions text-right">
                         <button type="button" rel="tooltip" title="Edit Task" class="btn btn-primary btn-link btn-sm">
@@ -355,7 +355,7 @@
                           </label>
                         </div>
                       </td>
-                      <td>Sign contract for "What are conference organizers afraid of?"</td>
+                      <td>Contratar desenvolvedor para sistema web</td>
                       <td class="td-actions text-right">
                         <button type="button" rel="tooltip" title="Edit Task" class="btn btn-primary btn-link btn-sm">
                           <i class="material-icons">edit</i>
@@ -375,41 +375,41 @@
       <div class="col-lg-6 col-md-12">
         <div class="card">
           <div class="card-header card-header-warning">
-            <h4 class="card-title">Employees Stats</h4>
-            <p class="card-category">New employees on 15th September, 2016</p>
+            <h4 class="card-title">Ultimas compras</h4>
+            <p class="card-category">Apenas compras confirmadas </p>
           </div>
           <div class="card-body table-responsive">
             <table class="table table-hover">
               <thead class="text-warning">
-                <th>ID</th>
-                <th>Name</th>
-                <th>Salary</th>
-                <th>Country</th>
+                <th>Fornecedor</th>
+                <th>Tipo de material</th>
+                <th>Valor</th>
+                <th>Data de entrega</th>
               </thead>
               <tbody>
                 <tr>
-                  <td>1</td>
-                  <td>Dakota Rice</td>
-                  <td>$36,738</td>
-                  <td>Niger</td>
+                  <td>1FLOOR</td>
+                  <td>Pisos</td>
+                  <td>R$36.738</td>
+                  <td>22/07/2020</td>
                 </tr>
                 <tr>
-                  <td>2</td>
-                  <td>Minerva Hooper</td>
-                  <td>$23,789</td>
-                  <td>Curaçao</td>
+                  <td>Cimentão bom</td>
+                  <td>Areia e cimento</td>
+                  <td>R$23.789</td>
+                  <td>21/07/2020</td>
                 </tr>
                 <tr>
-                  <td>3</td>
-                  <td>Sage Rodriguez</td>
-                  <td>$56,142</td>
-                  <td>Netherlands</td>
+                  <td>Janelas e CIA</td>
+                  <td>Janelas de madeira</td>
+                  <td>R$1.142</td>
+                  <td>20/07/2020</td>
                 </tr>
                 <tr>
-                  <td>4</td>
-                  <td>Philip Chaney</td>
-                  <td>$38,735</td>
-                  <td>Korea, South</td>
+                  <td>DELL</td>
+                  <td>Computador</td>
+                  <td>R$2.735</td>
+                  <td>19/07/2020</td>
                 </tr>
               </tbody>
             </table>
