--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -34,7 +34,7 @@
   <link href="/static/assets/css/material-dashboard.css?v=2.1.1" rel="stylesheet" />
   <!-- CSS Just for demo purpose, don't include it in your project -->
   <link href="/static/assets/demo/demo.css" rel="stylesheet" />
-
+  <link href="/static/assets/css/styles.css" rel="stylesheet" />
   <!-- Specific Page CSS goes HERE  -->
   {% block stylesheets %}{% endblock stylesheets %}
 
