--- a/core/templates/order.html
+++ b/core/templates/order.html
@@ -20,8 +20,8 @@
                             <div class="row">
 
                                 <div class="col-md-4">
-                                    {{forms2.nome.label_tag}}
-                                    {{forms2.nome}}
+                                    {{forms.nome.label_tag}}
+                                    {{forms.nome}}
                                 </div>
                                 <div class="col-md-4">
                                     {{forms.dataentrega.label_tag}}
@@ -34,8 +34,8 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-4">
-                                    {{forms2.disciplina.label_tag}}
-                                    {{forms2.disciplina}}
+                                    {{forms.disciplina.label_tag}}
+                                    {{forms.disciplina}}
                                 </div>
                                 <div class="col-md-4">
                                     {{forms.referencia.label_tag}}
@@ -56,8 +56,8 @@
                                     {{forms.numerooc}}
                                 </div>
                                  <div class="col-md-4">
-                                    {{forms2.faturador.label_tag}}
-                                    {{forms2.faturador}}
+                                    {{forms.faturador.label_tag}}
+                                    {{forms.faturador}}
                                 </div>
                             </div>
 
@@ -79,7 +79,41 @@
                                 </div>
                             </div>
                             <br>
+                            <hr class="separador">
+                            <h3>Informações de pagamento</h3>
+                            <div class="row">
+
+                                <div class="col-md-4">
+                                    {{forms.valor.label_tag}}
+                                    {{forms.valor}}
+                                </div>
+                                <div class="col-md-4">
+                                    {{forms.DDL.label_tag}}
+                                    {{forms.DDL}}
+                                </div>
+                                 <div class="col-md-4">
+                                    {{forms.datapg.label_tag}}
+                                    {{forms.datapg}}
+                                </div>
+                            </div>
+                            <div class="row">
+
+                                 <div class="col-md-6">
+                                    {{forms.obs.label_tag}}
+                                    {{forms.obs}}
+                                </div>
+                                <div class="col-md-6">
+                                    {{forms.descritivo.label_tag}}
+                                    {{forms.descritivo}}
+                                </div>
+
+                            </div>
+                            </div>
+                            <br>
                             <input type = "submit" value = 'Criar OC' />
+                            <button type="button" value = 'Gerar PDF'>
+                                
+                            </button>
                          </form>
 
 <!--                        <form method='POST'> {% csrf_token %}-->
