--- a/core/templates/page-user.html
+++ b/core/templates/page-user.html
@@ -20,7 +20,7 @@
                       <div class="col-md-5">
                         <div class="form-group">
                           <label class="bmd-label-floating">UserID (disabled)</label>
-                          <input type="text" class="form-control" disabled value="{{ request.user.id }}">
+                          <input type="text" class="form-control" disabled value="{{ user.profile.id }}">
                         </div>
                       </div>
                       <div class="col-md-3">
